	PR tree-optimization/22360 	* tree.c (upper_bound_in_type): Fix calculations for casting 	to a non-wider signed type and casting a signed value to a 	wider unsigned type. 	(lower_bound_in_type): Fix calculations for casting to a 	non-wider signed type.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@101785 138bc75d-0d04-0410-961f-82ee72b054a4